# tribe-bot

./: .gitignore  Cargo.toml
src/: main.rs
src/event_commands/: handle_intro_message.rs  handle_new_member.rs  handle_user_actions.rs  mod.rs
src/slash_commands/: mod.rs  ping_command.rs
